-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.0-beta1
-
cb70c38ca2ceb370e191fc5510c8faa59ed0007e
Profiling samegame shows "Source code not available" for the signal handler at samegame.qml:154 and the binding at Block.qml:113. We clearly know enough about those to show something more informative.
For Gerrit Dashboard: QTCREATORBUG-20500 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
230882,2 | QmlProfiler: Actually update the details when rewriter tells us to | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |