QmlProfiler: Actually update the details when rewriter tells us to

Before, only the signal was sent. While we're at it, also disambiguate
the method and signal names.

Change-Id: Iafce9b06841d7faedfefdb0638d0fa1f60c061c1
Task-number: QTCREATORBUG-20500
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>